--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,16 @@
+    <!-- Firebase App is always required and must be first -->
+    <script src="/__/firebase/5.7.0/firebase-app.js"></script>
+
+    <!-- Add additional services that you want to use -->
+    <script src="/__/firebase/5.7.0/firebase-auth.js"></script>
+    <script src="/__/firebase/5.7.0/firebase-database.js"></script>
+    <script src="/__/firebase/5.7.0/firebase-messaging.js"></script>
+    <script src="/__/firebase/5.7.0/firebase-functions.js"></script>
+
+    <!-- Comment out (or don't include) services that you don't want to use -->
+    <!-- <script src="/__/firebase/5.7.0/firebase-storage.js"></script> -->
+
+    <script src="/__/firebase/init.js"></script>
 
 <!DOCTYPE html>
 <html lang="en">
@@ -27,10 +40,7 @@
                   <a class="nav-link" href="/Teaching">Teaching</a>
                 </li>
           </ul>
-          <!-- <form class="form-inline">
-              <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-alert my-2 my-sm-0" type="submit">Search</button>
-            </form> -->
+
         </div>
       </nav>
       <div>
@@ -39,6 +49,7 @@
       <br />
   <head>
     <meta charset="utf-8">
+    <!-- <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png"> -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link href="https://fonts.google.com/specimen/Rokkitt?selection.family=Rokkitt" rel="stylesheet" type="text/css">
     <style>
@@ -47,19 +58,31 @@
         /* font-size: 48px; */
       }
     </style>
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="shortcut icon" href="favicon-96x96.png">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
-
+    <div class="card" style="width: 20rem;">
+        <div class="card-body">
+          <h5 class="card-title">ASSISTANT PROFESSOR</h5>
+          <h6 class="card-subtitle mb-2 text-muted">APPLIED LINGUISTICS</h6>
+          <h6 class="card-text">NORTHERN ARIZONA UNIVERSITY</h6>
+          <!-- <a href="#" class="card-link">Card link</a>
+          <a href="#" class="card-link">Another link</a> -->
+        </div>
+      </div>
     <title>React App</title>
     <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500"> -->
   </head>
   <body>
+    
+
 
     <div id="root"></div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>  
+    
   </body>
 </html>
