--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
-    <div class="card" style="width: 20rem;">
+    <div class="card" style="width: 20rem; border: 0">
         <div class="card-body">
           <h5 class="card-title">ASSISTANT PROFESSOR</h5>
           <h6 class="card-subtitle mb-2 text-muted">APPLIED LINGUISTICS</h6>
