--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 
 <!DOCTYPE html>
 <html lang="en">
-    <nav class="navbar navbar-expand-lg navbar-light navbar-light sticky-top" style="background-color: #1190eb;">
+    <nav class="navbar navbar-expand-lg navbar-light navbar-light sticky-top" style="background-color: #0088CC;">
         <a class="navbar-brand" href="#">Jesse Egbert PhD</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -62,16 +62,14 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
-    <div class="card" style="width: 20rem; border: 0">
+    <div class="card mx-auto" style="width: 20rem; border: 0">
         <div class="card-body">
-          <h5 class="card-title">ASSISTANT PROFESSOR</h5>
-          <h6 class="card-subtitle mb-2 text-muted">APPLIED LINGUISTICS</h6>
-          <h6 class="card-text">NORTHERN ARIZONA UNIVERSITY</h6>
-          <!-- <a href="#" class="card-link">Card link</a>
-          <a href="#" class="card-link">Another link</a> -->
+          <h5 class="card-title text-center">ASSISTANT PROFESSOR</h5>
+          <h6 class="card-subtitle mb-2 text-muted text-center">APPLIED LINGUISTICS</h6>
+          <h6 class="card-text text-center">NORTHERN ARIZONA UNIVERSITY</h6>
         </div>
       </div>
-    <title>React App</title>
+
     <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500"> -->
   </head>
   <body>
