--- a/public/index.html
+++ b/public/index.html
@@ -62,10 +62,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
-    <div class="card mx-auto" style="width: 20rem; border: 0">
+    <div class="card mx-auto" style="width: 40rem; border: 0">
         <div class="card-body">
-          <h5 class="card-title text-center">ASSISTANT PROFESSOR</h5>
-          <h6 class="card-subtitle mb-2 text-muted text-center">APPLIED LINGUISTICS</h6>
+          <h5 class="card-title text-center">Jesse Egbert: Applied Linguistics</h5>
+          <h6 class="card-subtitle mb-2 text-muted text-center">Assistant Professor</h6>
           <h6 class="card-text text-center">NORTHERN ARIZONA UNIVERSITY</h6>
         </div>
       </div>
