--- a/public/index.html
+++ b/public/index.html
@@ -1,86 +1,120 @@
-    <!-- Firebase App is always required and must be first -->
-    <script src="/__/firebase/5.7.0/firebase-app.js"></script>
+<!-- Firebase App is always required and must be first -->
+<script src="/__/firebase/5.7.0/firebase-app.js"></script>
 
-    <!-- Add additional services that you want to use -->
-    <script src="/__/firebase/5.7.0/firebase-auth.js"></script>
-    <script src="/__/firebase/5.7.0/firebase-database.js"></script>
-    <script src="/__/firebase/5.7.0/firebase-messaging.js"></script>
-    <script src="/__/firebase/5.7.0/firebase-functions.js"></script>
+<!-- Add additional services that you want to use -->
+<script src="/__/firebase/5.7.0/firebase-auth.js"></script>
+<script src="/__/firebase/5.7.0/firebase-database.js"></script>
+<script src="/__/firebase/5.7.0/firebase-messaging.js"></script>
+<script src="/__/firebase/5.7.0/firebase-functions.js"></script>
 
-    <!-- Comment out (or don't include) services that you don't want to use -->
-    <!-- <script src="/__/firebase/5.7.0/firebase-storage.js"></script> -->
+<!-- Comment out (or don't include) services that you don't want to use -->
+<!-- <script src="/__/firebase/5.7.0/firebase-storage.js"></script> -->
 
-    <script src="/__/firebase/init.js"></script>
+<script src="/__/firebase/init.js"></script>
 
 <!DOCTYPE html>
 <html lang="en">
-    <nav class="navbar navbar-expand-lg navbar-light navbar-light sticky-top" style="background-color: #0088CC;">
-        <a class="navbar-brand" href="#">Jesse Egbert PhD</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarText">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="/Home">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/Awards">Awards</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/Presentations">Presentations</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/Publications">Publications</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/Research">Research</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="/Teaching">Teaching</a>
-                </li>
-          </ul>
-
-        </div>
-      </nav>
-      <div>
-        <img src="fijicrop.jpg" alt="fiji" class= "PIC1">   
-      </div>  
-      <br />
+  <div class="container-fluid">
+    <h1 class="text-center" style="font-family: 'Rokkitt'">JESSE EGBERT</h1>
+    <h5 class="text-center text-muted;"></h5>
+  </div>
+  <nav
+    class="navbar navbar-expand-lg navbar-light navbar-light fixed"
+    style="background-color: transparent; font-family: 'Rokkitt', serif;"
+  >
+    <a class="navbar-brand" href="#"></a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-toggle="collapse"
+      data-target="#navbarText"
+      aria-controls="navbarText"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarText">
+      <ul class="navbar-nav mx-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="/Home"
+            >Home <span class="sr-only">(current)</span></a
+          >
+        </li>
+        <li class="nav-item"><a class="nav-link" href="/Awards">Awards</a></li>
+        <li class="nav-item">
+          <a class="nav-link" href="/Presentations">Presentations</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/Publications">Publications</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/Research">Research</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/Teaching">Teaching</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <div><img src="fijicrop.jpg" alt="fiji" class="PIC1" /></div>
+  <br />
   <head>
-    <meta charset="utf-8">
-    <!-- <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png"> -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link href="https://fonts.google.com/specimen/Rokkitt?selection.family=Rokkitt" rel="stylesheet" type="text/css">
-    <style>
-      body {
-        font-family: 'Rokkitt', serif;
-        /* font-size: 48px; */
-      }
-    </style>
-    <link rel="shortcut icon" href="favicon-96x96.png">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#000000">
-    <div class="card mx-auto" style="width: 40rem; border: 0">
-        <div class="card-body">
-          <h5 class="card-title text-center">Jesse Egbert: Applied Linguistics</h5>
-          <h6 class="card-subtitle mb-2 text-muted text-center">Assistant Professor</h6>
-          <h6 class="card-text text-center">NORTHERN ARIZONA UNIVERSITY</h6>
-        </div>
-      </div>
+    <meta charset="utf-8" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+      crossorigin="anonymous"
+    />
 
-    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500"> -->
+
+    <style>
+      @import url("https://fonts.googleapis.com/css?family=Rokkitt");
+    </style>
+    <link rel="shortcut icon" href="favicon-96x96.png" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+      crossorigin="anonymous"
+    />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="theme-color" content="#000000" />
+    <div
+      class="card mx-auto"
+      style="font-family: 'Rokkitt', serif; width: 40rem; border: 0"
+    >
+      <div class="card-body">
+        <h5 class="card-title text-center">Applied Linguistics</h5>
+        <h6 class="card-subtitle mb-2 text-muted text-center">
+          Assistant Professor
+        </h6>
+        <h6 class="card-text text-center">NORTHERN ARIZONA UNIVERSITY</h6>
+      </div>
+    </div>
+
   </head>
   <body>
-    
+    <div style="font-family: 'Rokkitt', serif;" id="root"></div>
 
-
-    <div id="root"></div>
-
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>  
-    
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+      integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+      integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
