Firebase connection updated, Teaching format worked on, User.js created

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <div class="container-fluid">
-    <h1 class="text-center" style="font-family: 'Rokkitt'">JESSE EGBERT</h1>
+    <h1 class="text-center" style="font-family: 'Rokkitt'; padding-top: 1em">JESSE EGBERT</h1>
     <h5 class="text-center text-muted;"></h5>
   </div>
   <nav
@@ -41,19 +41,19 @@
             >Home <span class="sr-only">(current)</span></a
           >
         </li>
-        <li class="nav-item"><a class="nav-link" href="/Awards">Awards</a></li>
-        <li class="nav-item">
-          <a class="nav-link" href="/Presentations">Presentations</a>
-        </li>
         <li class="nav-item">
           <a class="nav-link" href="/Publications">Publications</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/Research">Research</a>
+          <a class="nav-link" href="/Presentations">Presentations</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/Teaching">Teaching</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/Research">Research</a>
+        </li>
+        <li class="nav-item"><a class="nav-link" href="/Awards">Awards</a></li>
       </ul>
     </div>
   </nav>
@@ -67,7 +67,6 @@
       integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
       crossorigin="anonymous"
     />
-
 
     <style>
       @import url("https://fonts.googleapis.com/css?family=Rokkitt");
@@ -89,14 +88,13 @@
       style="font-family: 'Rokkitt', serif; width: 40rem; border: 0"
     >
       <div class="card-body">
-        <h5 class="card-title text-center">Applied Linguistics</h5>
-        <h6 class="card-subtitle mb-2 text-muted text-center">
-          Assistant Professor
-        </h6>
-        <h6 class="card-text text-center">NORTHERN ARIZONA UNIVERSITY</h6>
+        <h3 class="card-title text-center">Assistant Professor</h3>
+        <h4 class="card-title text-center">
+            Applied Linguistics
+        </h4>
+        <h4 class="card-title text-center">Northern Arizona University</h4>
       </div>
     </div>
-
   </head>
   <body>
     <div style="font-family: 'Rokkitt', serif;" id="root"></div>
