--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,14 @@
           <a class="nav-link" href="/Research">Research</a>
         </li>
         <li class="nav-item"><a class="nav-link" href="/Awards">Awards</a></li>
+        <li class="nav-item">
+          <a class="nav-link" href="/admin/Presentationsform">Submit</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/admin/FormUpdate">Update</a>
+        </li>
       </ul>
+
     </div>
   </nav>
   <div><img src="fijicrop.jpg" alt="fiji" class="PIC1" /></div>
